# scikit-sampling

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: continuous-integration.yml  deployment.yml  release.yml
docs/: estimation.md
sksampling/: __init__.py
tests/: test_estimation.py  test_sampling.py
