[project]
name = "scikit-sampling"
version = "0.1.0"
requires-python = ">=3.10"
description = "A set of python modules for dataset sampling"
url = "https://github.com/leomaurodesenv/scikit-sampling"
readme = "README.md"
license = "MIT"

authors = [
  {name = "Leonardo Moraes", email = "leomaurodesenv@users.noreply.github.com"}
]
maintainers = [
  {name = "Leonardo Moraes", email = "leomaurodesenv@users.noreply.github.com"}
]

dependencies = []

[dependency-groups]
dev = [
    "commitizen~=4.8.3",
    "pre-commit~=4.2.0",
]
